meson: Get rid of lib prefix
Plugins should be installed without this prefix.
Wrong: libsearch-tool-qt.so
Correct: search-tool-qt.so

Otherwise aud_plugin_lookup_basename() cannot find
plugins like the search-tool and plugin-manager
when they are activated.

I wish there was a global option for this, but I found none...

--- a/src/aac/meson.build
+++ b/src/aac/meson.build
@@ -5,9 +5,9 @@ if faad_dep.found()
   shared_module('aac-raw',
     'aac.cc',
     dependencies: [audacious_dep, faad_dep, audtag_dep],
+    name_prefix: '',
     include_directories: [src_inc],
     install: true,
     install_dir: input_plugin_dir,
   )
 endif
-
