--- a/src/adplug/meson.build
+++ b/src/adplug/meson.build
@@ -17,6 +17,7 @@ if adplug_dep.found()
   shared_module('adplug',
     'adplug-xmms.cc',
     dependencies: [audacious_dep, adplug_dep, audtag_dep],
+    name_prefix: '',
     include_directories: [src_inc],
     install: true,
     install_dir: input_plugin_dir,
