--- a/src/aosd/meson.build
+++ b/src/aosd/meson.build
@@ -17,6 +17,7 @@ if x11_dep.found()
   shared_module('aosd',
     aosd_sources,
     dependencies: [audacious_dep, math_dep, gtk_dep, glib_dep, x11_dep],
+    name_prefix: '',
     install: true,
     install_dir: general_plugin_dir
   )
