--- a/src/asx3/meson.build
+++ b/src/asx3/meson.build
@@ -1,7 +1,7 @@
 shared_module('asx3',
   'asx3.cc',
   dependencies: [audacious_dep, xml_dep],
+  name_prefix: '',
   install: true,
   install_dir: container_plugin_dir
 )
-
