--- a/src/audpl/meson.build
+++ b/src/audpl/meson.build
@@ -1,6 +1,7 @@
 shared_module('audpl',
   'audpl.cc',
   dependencies: [audacious_dep],
+  name_prefix: '',
   install: true,
   install_dir: container_plugin_dir
 )
