--- a/src/blur_scope-qt/meson.build
+++ b/src/blur_scope-qt/meson.build
@@ -1,7 +1,7 @@
 shared_module('blur_scope-qt',
   'blur_scope.cc',
   dependencies: [audacious_dep, qt_dep, glib_dep, audqt_dep],
+  name_prefix: '',
   install: true,
   install_dir: visualization_plugin_dir
 )
-
