--- a/src/cd-menu-items/meson.build
+++ b/src/cd-menu-items/meson.build
@@ -1,6 +1,7 @@
 shared_module('cd-menu-items',
   'cd-menu-items.cc',
   dependencies: [audacious_dep],
+  name_prefix: '',
   install: true,
   install_dir: general_plugin_dir
 )
