--- a/src/cdaudio/meson.build
+++ b/src/cdaudio/meson.build
@@ -1,6 +1,7 @@
 shared_module('cdaudio-ng',
   'cdaudio-ng.cc',
   dependencies: [audacious_dep, libcdio_dep, libcdio_cdda_dep, libcddb_dep],
+  name_prefix: '',
   install: true,
   install_dir: input_plugin_dir
 )
