--- a/src/echo_plugin/meson.build
+++ b/src/echo_plugin/meson.build
@@ -1,7 +1,7 @@
 shared_module('echo',
   'echo.cc',
   dependencies: [audacious_dep],
+  name_prefix: '',
   install: true,
   install_dir: effect_plugin_dir
 )
-
