--- a/src/flac/meson.build
+++ b/src/flac/meson.build
@@ -8,9 +8,9 @@ if flac_dep.found()
     'seekable_stream_callbacks.cc',
     'metadata.cc',
     dependencies: [audacious_dep, flac_dep],
+    name_prefix: '',
     include_directories: [src_inc],
     install: true,
     install_dir: input_plugin_dir,
   )
 endif
-
