--- a/src/glspectrum/meson.build
+++ b/src/glspectrum/meson.build
@@ -5,6 +5,7 @@ if opengl_dep.found()
   shared_module('gl-spectrum',
     'gl-spectrum.cc',
     dependencies: [audacious_dep, math_dep, gtk_dep, glib_dep, opengl_dep],
+    name_prefix: '',
     install: true,
     install_dir: visualization_plugin_dir
   )
