--- a/src/hotkey/meson.build
+++ b/src/hotkey/meson.build
@@ -12,6 +12,7 @@ if gdk_x11_dep.found()
   shared_module('hotkey',
     hotkey_sources,
     dependencies: [audacious_dep, audgui_dep, gtk_dep, glib_dep, gdk_x11_dep],
+    name_prefix: '',
     install: true,
     install_dir: general_plugin_dir
   )
