--- a/src/m3u/meson.build
+++ b/src/m3u/meson.build
@@ -1,7 +1,7 @@
 shared_module('m3u',
   'm3u.cc',
   dependencies: [audacious_dep],
+  name_prefix: '',
   install: true,
   install_dir: container_plugin_dir
 )
-
