--- a/src/metronom/meson.build
+++ b/src/metronom/meson.build
@@ -1,7 +1,7 @@
 shared_module('metronom',
   'metronom.cc',
   dependencies: [audacious_dep],
+  name_prefix: '',
   install: true,
   install_dir: input_plugin_dir
 )
-
