--- a/src/moonstone/meson.build
+++ b/src/moonstone/meson.build
@@ -15,6 +15,7 @@ moonstone_sources = [
 shared_module('moonstone',
   moonstone_sources,
   dependencies: [audacious_dep, qt_dep, audqt_dep],
+  name_prefix: '',
   install: true,
   install_dir: general_plugin_dir
 )
