--- a/src/pls/meson.build
+++ b/src/pls/meson.build
@@ -1,7 +1,7 @@
 shared_module('pls',
   'pls.cc',
   dependencies: [audacious_dep],
+  name_prefix: '',
   install: true,
   install_dir: container_plugin_dir
 )
-
