--- a/src/qt-spectrum/meson.build
+++ b/src/qt-spectrum/meson.build
@@ -1,6 +1,7 @@
 shared_module('qt-spectrum',
   'qt-spectrum.cc',
   dependencies: [audacious_dep, qt_dep, audqt_dep],
+  name_prefix: '',
   install: true,
   install_dir: visualization_plugin_dir
 )
