--- a/src/qthotkey/meson.build
+++ b/src/qthotkey/meson.build
@@ -7,6 +7,7 @@ qthotkey_sources = [
 shared_module('qthotkey',
   qthotkey_sources,
   dependencies: [audacious_dep, qt_dep, audqt_dep, qtx11extras_dep],
+  name_prefix: '',
   install: true,
   install_dir: general_plugin_dir
 )
