--- a/src/search-tool-qt/meson.build
+++ b/src/search-tool-qt/meson.build
@@ -4,7 +4,7 @@ shared_module('search-tool-qt',
   'search-model.cc',
   'search-tool-qt.cc',
   dependencies: [audacious_dep, qt_dep, glib_dep, audqt_dep],
+  name_prefix: '',
   install: true,
   install_dir: general_plugin_dir
 )
-
