--- a/src/skins-qt/meson.build
+++ b/src/skins-qt/meson.build
@@ -38,7 +38,7 @@ skins_qt_sources = [
 shared_module('skins-qt',
   skins_qt_sources,
   dependencies: [audacious_dep, qt_dep, glib_dep, audqt_dep],
+  name_prefix: '',
   install: true,
   install_dir: general_plugin_dir
 )
-
