--- a/src/sndfile/meson.build
+++ b/src/sndfile/meson.build
@@ -5,6 +5,7 @@ if sndfile_dep.found()
   shared_module('sndfile',
     'plugin.cc',
     dependencies: [audacious_dep, sndfile_dep],
+    name_prefix: '',
     include_directories: [src_inc],
     install: true,
     install_dir: input_plugin_dir,
