--- a/src/songchange/meson.build
+++ b/src/songchange/meson.build
@@ -2,6 +2,7 @@ shared_module('songchange',
   'song_change.cc',
   'formatter.cc',
   dependencies: [audacious_dep, glib_dep],
+  name_prefix: '',
   install: true,
   install_dir: general_plugin_dir
 )
