--- a/src/speedpitch/meson.build
+++ b/src/speedpitch/meson.build
@@ -2,7 +2,7 @@ shared_module('speed-pitch',
   'speed-pitch.cc',
   include_directories: [src_inc],
   dependencies: [audacious_dep, samplerate_dep],
+  name_prefix: '',
   install: true,
   install_dir: effect_plugin_dir
 )
-
