--- a/src/vumeter-qt/meson.build
+++ b/src/vumeter-qt/meson.build
@@ -2,7 +2,7 @@ shared_module('vumeter-qt',
   'vumeter_qt.cc',
   'vumeter_qt_widget.cc',
   dependencies: [audacious_dep, qt_dep],
+  name_prefix: '',
   install: true,
   install_dir: visualization_plugin_dir
 )
-
