--- a/src/wavpack/meson.build
+++ b/src/wavpack/meson.build
@@ -5,6 +5,7 @@ if wavpack_dep.found()
   shared_module('wavpack',
     'wavpack.cc',
     dependencies: [audacious_dep, wavpack_dep, audtag_dep],
+    name_prefix: '',
     include_directories: [src_inc],
     install: true,
     install_dir: input_plugin_dir,
