--- a/src/alarm/meson.build
+++ b/src/alarm/meson.build
@@ -7,6 +7,7 @@ alarm_sources = [
 shared_module('alarm',
   alarm_sources,
   dependencies: [audacious_dep, gtk_dep, audgui_dep],
+  name_prefix: '',
   install: true,
   install_dir: general_plugin_dir
 )
