--- a/src/albumart-qt/meson.build
+++ b/src/albumart-qt/meson.build
@@ -1,7 +1,7 @@
 shared_module('albumart-qt',
   'albumart.cc',
   dependencies: [audacious_dep, qt_dep, audqt_dep],
+  name_prefix: '',
   install: true,
   install_dir: general_plugin_dir
 )
-
