--- a/src/asx/meson.build
+++ b/src/asx/meson.build
@@ -1,7 +1,7 @@
 shared_module('asx',
   'asx.cc',
   dependencies: [audacious_dep],
+  name_prefix: '',
   install: true,
   install_dir: container_plugin_dir
 )
-
