--- a/src/bs2b/meson.build
+++ b/src/bs2b/meson.build
@@ -5,6 +5,7 @@ if bs2b_dep.found()
   shared_module('bs2b',
     'plugin.cc',
     dependencies: [audacious_dep, bs2b_dep],
+    name_prefix: '',
     install: true,
     install_dir: effect_plugin_dir
   )
