--- a/src/compressor/meson.build
+++ b/src/compressor/meson.build
@@ -1,7 +1,7 @@
 shared_module('compressor',
   'compressor.cc',
   dependencies: [audacious_dep],
+  name_prefix: '',
   install: true,
   install_dir: effect_plugin_dir
 )
-
