--- a/src/crystalizer/meson.build
+++ b/src/crystalizer/meson.build
@@ -1,7 +1,7 @@
 shared_module('crystalizer',
   'crystalizer.cc',
   dependencies: [audacious_dep],
+  name_prefix: '',
   install: true,
   install_dir: effect_plugin_dir
 )
-
