--- a/src/gio/meson.build
+++ b/src/gio/meson.build
@@ -4,7 +4,7 @@ gio_dep = dependency('gio-2.0', version: glib_req, required: true)
 shared_module('gio',
   'gio.cc',
   dependencies: [audacious_dep, gio_dep],
+  name_prefix: '',
   install: true,
   install_dir: transport_plugin_dir
 )
-
