--- a/src/lirc/meson.build
+++ b/src/lirc/meson.build
@@ -5,6 +5,7 @@ if lirc_dep.found()
   shared_module('lirc',
     'lirc.cc',
     dependencies: [audacious_dep, glib_dep, lirc_dep],
+    name_prefix: '',
     link_args: ['-llirc_client'],
     install: true,
     install_dir: general_plugin_dir
