--- a/src/lyricwiki-qt/meson.build
+++ b/src/lyricwiki-qt/meson.build
@@ -1,7 +1,7 @@
 shared_module('lyricwiki-qt',
   'lyricwiki.cc',
   dependencies: [audacious_dep, qt_dep, glib_dep, xml_dep, audqt_dep],
+  name_prefix: '',
   install: true,
   install_dir: general_plugin_dir
 )
-
