--- a/src/mixer/meson.build
+++ b/src/mixer/meson.build
@@ -1,7 +1,7 @@
 shared_module('mixer',
   'mixer.cc',
   dependencies: [audacious_dep],
+  name_prefix: '',
   install: true,
   install_dir: effect_plugin_dir
 )
-
