--- a/src/mpg123/meson.build
+++ b/src/mpg123/meson.build
@@ -5,9 +5,9 @@ if mpg123_dep.found()
   shared_module('madplug',
     'mpg123.cc',
     dependencies: [audacious_dep, mpg123_dep, audtag_dep],
+    name_prefix: '',
     include_directories: [src_inc],
     install: true,
     install_dir: input_plugin_dir,
   )
 endif
-
