--- a/src/playlist-manager-qt/meson.build
+++ b/src/playlist-manager-qt/meson.build
@@ -1,7 +1,7 @@
 shared_module('playlist-manager-qt',
   'playlist-manager-qt.cc',
   dependencies: [audacious_dep, qt_dep, audqt_dep],
+  name_prefix: '',
   install: true,
   install_dir: general_plugin_dir
 )
-
