--- a/src/silence-removal/meson.build
+++ b/src/silence-removal/meson.build
@@ -1,7 +1,7 @@
 shared_module('silence-removal',
   'silence-removal.cc',
   dependencies: [audacious_dep],
+  name_prefix: '',
   install: true,
   install_dir: effect_plugin_dir
 )
-
