--- a/src/song-info-qt/meson.build
+++ b/src/song-info-qt/meson.build
@@ -1,7 +1,7 @@
 shared_module('song-info-qt',
   'song-info.cc',
   dependencies: [audacious_dep, qt_dep, audqt_dep],
+  name_prefix: '',
   install: true,
   install_dir: general_plugin_dir
 )
-
