--- a/src/tonegen/meson.build
+++ b/src/tonegen/meson.build
@@ -1,7 +1,7 @@
 shared_module('tonegen',
   'tonegen.cc',
   dependencies: [audacious_dep],
+  name_prefix: '',
   install: true,
   install_dir: input_plugin_dir
 )
-
