--- a/src/voice_removal/meson.build
+++ b/src/voice_removal/meson.build
@@ -1,7 +1,7 @@
 shared_module('voice_removal',
   'voice_removal.cc',
   dependencies: [audacious_dep],
+  name_prefix: '',
   install: true,
   install_dir: effect_plugin_dir
 )
-
