--- a/src/cue/meson.build
+++ b/src/cue/meson.build
@@ -5,7 +5,7 @@ if cue2_dep.found()
   cue_dep = cue2_dep
   conf.set10('HAVE_LIBCUE2', true)
 else
-  cue1_dep = dependency('libcue')
+  cue1_dep = dependency('libcue', required: false)
 
   if cue1_dep.found()
     cue_dep = cue1_dep
