--- a/src/qtglspectrum/meson.build
+++ b/src/qtglspectrum/meson.build
@@ -1,13 +1,12 @@
-qt_opengl_dep = dependency('qt5',
-  version: '>= 5.4',
-  required: get_option('gl-spectrum'),
-  modules: ['OpenGL']
-)
+qt_opengl_dep = dependency('qt5', version: '>= 5.4', required: false, modules: ['OpenGL'])
 
-shared_module('gl-spectrum-qt',
-  'gl-spectrum.cc',
-  dependencies: [audacious_dep, qt_dep, audqt_dep, qt_opengl_dep],
-  name_prefix: '',
-  install: true,
-  install_dir: visualization_plugin_dir
-)
+
+if qt_opengl_dep.found()
+  shared_module('gl-spectrum-qt',
+    'gl-spectrum.cc',
+    dependencies: [audacious_dep, qt_dep, audqt_dep, qt_opengl_dep],
+    name_prefix: '',
+    install: true,
+    install_dir: visualization_plugin_dir
+  )
+endif
