--- a/src/qthotkey/meson.build
+++ b/src/qthotkey/meson.build
@@ -1,13 +1,13 @@
-qthotkey_sources = [
-  'gui.cc',
-  'plugin.cc'
-]
+qtx11extras_dep = dependency('qt5', version: qt_req, required: false, modules: ['X11Extras'])
 
 
-shared_module('qthotkey',
-  qthotkey_sources,
-  dependencies: [audacious_dep, qt_dep, audqt_dep, qtx11extras_dep],
-  name_prefix: '',
-  install: true,
-  install_dir: general_plugin_dir
-)
+if qtx11extras_dep.found()
+  shared_module('qthotkey',
+    'gui.cc',
+    'plugin.cc',
+    dependencies: [audacious_dep, qt_dep, audqt_dep, qtx11extras_dep],
+    name_prefix: '',
+    install: true,
+    install_dir: general_plugin_dir
+  )
+endif
