--- a/src/vorbis/meson.build
+++ b/src/vorbis/meson.build
@@ -1,10 +1,10 @@
-ogg_dep = dependency('ogg', version: '>= 1.0')
-vorbis_dep = dependency('vorbis', version: '>= 1.0')
-vorbisenc_dep = dependency('vorbisenc', version: '>= 1.0')
-vorbisfile_dep = dependency('vorbisfile', version: '>= 1.0')
+ogg_dep = dependency('ogg', version: '>= 1.0', required: false)
+vorbis_dep = dependency('vorbis', version: '>= 1.0', required: false)
+vorbisenc_dep = dependency('vorbisenc', version: '>= 1.0', required: false)
+vorbisfile_dep = dependency('vorbisfile', version: '>= 1.0', required: false)
 
 
-if ogg_dep.found()
+if ogg_dep.found() and vorbis_dep.found()
   shared_module('vorbis',
     'vcupdate.cc',
     'vcedit.cc',
