--- a/src/meson.build
+++ b/src/meson.build
@@ -4,7 +4,7 @@ src_inc = include_directories('.')
 config_h_full_path = join_paths(meson.current_build_dir(), 'config.h')
 
 
-if cc.get_id() == 'gcc' or cc.get_id() == 'clang'
+if cc.get_id() in ['gcc', 'clang']
   add_project_arguments('-include', config_h_full_path, language: 'c')
   add_project_arguments('-include', config_h_full_path, language: 'cpp')
 else
