meson: Use same plugin names as with Autoconf

--- a/src/songchange/meson.build
+++ b/src/songchange/meson.build
@@ -1,4 +1,4 @@
-shared_module('songchange',
+shared_module('song_change',
   'song_change.cc',
   'formatter.cc',
   dependencies: [audacious_dep, glib_dep],
