--- a/src/oss4/meson.build
+++ b/src/oss4/meson.build
@@ -1,5 +1,6 @@
 # XXX - Auto-detect this path from /etc/oss.conf
-oss_inc = '/usr/lib/oss/include/sys'
+oss_inc = '/usr/lib/oss/include'
+oss_inc_dirs = []
 
 
 oss_sources = [
@@ -9,12 +10,27 @@ oss_sources = [
 ]
 
 
-if cxx.has_header('soundcard.h', args: '-I' + oss_inc)
+if cxx.has_header('sys/soundcard.h', args: '-I' + oss_inc)
+  have_oss = true
+  conf.set10('HAVE_SYS_SOUNDCARD_H', true)
+elif cxx.has_header('soundcard.h', args: '-I' + oss_inc)
+  have_oss = true
+else
+  have_oss = false
+endif
+
+
+if have_oss
+  cmd = run_command('test', '-d', oss_inc)
+  if cmd.returncode() == 0
+    oss_inc_dirs += oss_inc
+  endif
+
   shared_module('oss4',
     oss_sources,
     dependencies: [audacious_dep],
     name_prefix: '',
-    include_directories: oss_inc,
+    include_directories: oss_inc_dirs,
     install: true,
     install_dir: output_plugin_dir
   )
