meson: Silence some compiler warnings
See also commit 9816dc601db652684855.

--- a/src/console/meson.build
+++ b/src/console/meson.build
@@ -58,10 +58,16 @@ plugin_sources = [
 ]
 
 
+cpp_args = cxx.get_supported_arguments([
+  '-Wno-shift-negative-value'
+])
+
+
 shared_module('console',
   gme_sources,
   plugin_sources,
   dependencies: [audacious_dep, zlib_dep],
+  cpp_args: cpp_args,
   name_prefix: '',
   install: true,
   install_dir: input_plugin_dir
